<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".presentation.ui.main.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            android:layout_gravity="center"
            android:src="@drawable/chart_main_screen"
            android:contentDescription="@string/chart_main_screen" />

        <LinearLayout
            android:id="@+id/container_top_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/texts_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/font"
                    style="@style/TextTitleScreens"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/quotes" />

                <TextView
                    android:id="@+id/btn_see_more"
                    style="@style/ButtonOutlineSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/see_more" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_currency_h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                tools:itemCount="1"
                tools:listitem="@layout/single_currencies_horizontal" />

            <LinearLayout
                android:id="@+id/nav_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_golossary"
                    style="@style/BtnNavigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_icon_golossary_btn"
                    android:text="@string/golossary"
                    tools:ignore="RtlHardcoded" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_converter"
                    style="@style/BtnNavigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_icon_currency_converter"
                    android:text="@string/currency_converter"
                    tools:ignore="RtlHardcoded" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_education_of_bo_trading"
                    style="@style/BtnNavigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_icon_education_of_bo_trading"
                    android:text="@string/education_of_bo_trading"
                    tools:ignore="RtlHardcoded" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_about"
                    style="@style/BtnNavigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_icon_about_us"
                    android:text="@string/about_us"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>