<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_2">

    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:gravity="left|center"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded,UseCompoundDrawables">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button"
            android:padding="16dp"
            android:src="@drawable/ic_back_button" />

        <TextView
            style="@style/TextTitleScreens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_converter" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:orientation="horizontal"
        android:id="@+id/container_with_currency">

        <androidx.cardview.widget.CardView
            android:id="@+id/currency_from"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="@color/dark_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/currency_logo_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <TextView
                    style="@style/TextTitleScreens"
                    android:id="@+id/currency_name_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/btn_change_position_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_ico_change"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/currency_to"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="@color/dark_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/currency_logo_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <TextView
                    style="@style/TextTitleScreens"
                    android:id="@+id/currency_name_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/container_with_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="@color/dark_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_amount_currency"
                    style="@style/TextTitleScreens"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/_1"
                    android:maxLength="8"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/multiply_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_icon_multiply"/>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="@color/dark_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/result_convert"
                    style="@style/TextTitleScreens"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>